# TextAdventure-Experiments

./: CMakeLists.txt  README.md  commands.cpp  commands.h  flake.nix  game.cpp  game.h  main.cpp  roll.cpp  roll.h
ai/: ai.h
character/: character.h
character/professions/: ability.h  profession.h  profession_component.h  professions.cpp
character/race/: races.cpp  races.h
character/statistics/: scar.h  statistics.cpp
character/stats/: stats.h
characters/: character.h  character_enums.h  player.h  size.h
characters/npc/: dialogue_component.cpp  dialogue_component.h  npc.cpp  npc.h
characters/professions/: ability.cpp  ability.h  profession.h  professions.cpp
characters/statistics/: scar.h  statistics.h
combat/: assailable.h
items/: item.cpp  item.h
map/: interactable.h  interactible.h  map.cpp  map.h  seychia_interactable_db.cpp  seychia_map.cpp  seychia_room_db.cpp
